


[workspace]
resolver = "2"
members = [
    "app",
    "assembler",
    "compiler",
    "mips_emulator",
    "elf",
]


#[patch."https://github.com/ParkerTenBroeck/egui_dock?branch=closing_tabs#ff0f67f5462f0974560e7f00dcec1b21f925c3e0"]
#"egui" = { git = "https://github.com/ParkerTenBroeck/egui" }


[patch.crates-io]
"egui" = { git = "https://github.com/ParkerTenBroeck/egui" }
"eframe" = { git = "https://github.com/ParkerTenBroeck/egui" }
"egui_dock" = {  git = "https://github.com/ParkerTenBroeck/egui_dock.git", branch = "closing_tabs" }
#"egui_dock" = { path = "/home/may/Documents/GitHub/egui_dock" }