[workspace]
resolver = "2"
members = [
    "app",
    "assembler",
    "compiler",
    "mips_emulator",
    "elf",
    "gdb",
]


[patch.crates-io]
"egui" = { git = "https://github.com/ParkerTenBroeck/egui" }
"eframe" = { git = "https://github.com/ParkerTenBroeck/egui" }
"egui_dock" = {  git = "https://github.com/ParkerTenBroeck/egui_dock" }
#"egui_dock" = { path = "/home/may/Documents/GitHub/egui_dock" }
