[package]
name = "app"
version = "0.1.0"
authors = ["Parker TenBroeck"]
edition = "2021"
build = "build.rs"
rust-version = "1.63"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#eframe = "0.18.0"
mycelium-bitfield = "0.1.2"
eframe = "*" # Gives us egui, epi and web+native backendsgit = "https://github.com/ParkerTenBroeck/egui"
egui_dock = "*"#{ git = "https://github.com/ParkerTenBroeck/egui_dock", branch = "closing_tabs" }
mips_emulator = { path = "../mips_emulator" }
clike = { path = "../compiler" }
assembler = { path = "../assembler" }
util = { path = "../util" }
enum-map = { version = "2", features = ["serde"] }
log = { version = "0.4" }

serde = { version = "1", features = ["derive"], optional = false }
qoi = "*"


[features]
default = []
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
debug = true
opt-level = 2 # fast and small wasm

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", '--debuginfo', '--enable-threads', '--enable-bulk-memory']

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_closure = "0.2"
wasm-logger = "0.2.0"
serde_derive = "1"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
js-sys = "0.3.58"
web-sys = { version = "0.3.23", features = [  'CanvasRenderingContext2d', 'ErrorEvent', 'Event', 'ImageData', 'Navigator', 'Window', 'Worker', 'DedicatedWorkerGlobalScope','MessageEvent']}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.24.1"
rodio = "0.15.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
