[package]
name = "clike_gui"
version = "0.1.0"
authors = ["Parker TenBroeck"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
mips_emulator = { path = "../mips_emulator" }
clike = { path = "../compiler" }
enum-map = { version = "2", features = ["serde"] }

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.24.1"
