[package]
name = "elf"
version = "0.1.0"
edition = "2021"
authors = ["Parker TenBroeck"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "elf"
path = "src/lib.rs"

[dependencies]
bitflags = "1.0.4"
num-traits = { version = "0.2", default-features = false }