[package]
name = "gdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mips_emulator = { path = "../mips_emulator"}
log = {version = "0.4.16", features = ["max_level_trace", "release_max_level_trace"]}
num-traits = { version = "0.2", default-features = false }