[package]
name = "mips_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["memory_allignment_check"]
external_handlers = []
system_call_plugins = ["external_handlers"]
memory_allignment_check = []

[dependencies]
